Description
In notepad, fix the problem where the font size was way too big. Also, if the entries in the registry don't exist for the program, then create the entries when saving the settings. And finally, once the settings are loaded when the program starts up, actually set the font to the editor portion of the program (Globals.hEdit) with the loaded values.
Attachments
Issue Links
- is blocked by
-
CORE-9371 Partial Wine 1.7.37/38 sync of notepad
-
- Resolved
-