[NOTEPAD] Fix loading font settings. By Lee Schroeder. CORE-9074

svn path=/trunk/; revision=67962